--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <!-- Zoomed Radar Page -->
       <div id="zoomed-radar-page" class="page-container regular-page-container">
         <div class="page-title-bar regular-text">
-          <div style="display: inline-block">3 Hour Radar</div>
+          <div style="display: inline-block">The Pee Pee Poo Poo Man</div>
           <div class="key">
             <div class="key-item key-item-snow">
               <div class="key-color-group">
