Change music and styling

--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
     </div>
 
     <!-- Text Crawl -->
-    <div id="crawler-container">
+    <!--<div id="crawler-container">
       <div id="crawl-text" class="regular-text"></div>
-    </div>
+    </div>-->
 
     <!-- Timeline Container -->
     <div id="timeline-container">
