--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <!-- Its Amazing Out There -->
     <div id="amazing-container">
-      <div class="regular-text" id="amazing-text">#ItsAmazingOutThere</div>
+      <div class="regular-text" id="amazing-text">Keep it up, gamester</div>
       <img src="assets/logos/twc_color.svg" id="amazing-logo">
     </div>
 
